# PIXELPROWLERS_NUXT_DJANGO_STRAPI

./: .gitignore  AGENTS.md  Makefile  README.md
agents/: README.md  agents_registry.json
backend_django/: README.md  manage.py  pyproject.toml  pytest.ini
backend_django/apps/contact/: __init__.py  admin.py  models.py  serializers.py  urls.py  views.py
backend_django/apps/contact/management/: __init__.py
backend_django/apps/contact/management/commands/: __init__.py  purge_contacts.py
backend_django/apps/contact/migrations/: 0001_initial.py  0002_contact_fullstack_v1_3.py
backend_django/apps/core/: __init__.py  logging.py  middleware.py  ratelimit.py  sanitizers.py
backend_django/apps/gate125/: __init__.py  auth.py  urls.py  views.py
backend_django/apps/health/: urls.py  views.py
backend_django/apps/resources/: __init__.py  catalog.py  urls.py  views.py
backend_django/pixel_backend/: __init__.py  asgi.py  urls.py  wsgi.py
backend_django/pixel_backend/settings/: __init__.py  base.py  dev.py  prod.py  test.py
backend_django/tests/: __init__.py  conftest.py  test_api_integration.py  test_contact_api_fullstack.py  test_logging.py  test_purge_contacts.py  test_ratelimit.py  test_resources_api.py  test_sanitizers.py  test_ssot_resources_catalog_validate.py
cms_strapi/: README.md  package.json
docs/: DB_SETUP.md  PHASES_DEV.md  README.md  UI_TEXTS_EXTRACTOR.md  ui_texts_schema.json
frontend_nuxt/: .env.example  app.vue  nuxt.config.ts  package-lock.json  package.json
tools/: add_frontmatter.py  agent_runtime.py  agents_generate_registry.py  (+13 more)
(+584 files in other folders)
